--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,4 +3,5 @@ members = [
     "algorithms/bubble_sort",
     "algorithms/merge_sort",
     "algorithms/quick_sort",
+    "algorithms/fibonacci",
 ]
