--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,4 +2,6 @@
 members = [
     "algorithms/bubble_sort",
     "algorithms/merge_sort",
+    "algorithms/quick_sort",
+    "algorithms/fibonacci",
 ]
