latest changes from thread pool

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,4 +5,5 @@ members = [
     "algorithms/quick_sort",
     "algorithms/fibonacci",
     "algorithms/scheduling",
+    "algorithms/threadpool",
 ]
